--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -98,6 +98,7 @@ jobs:
         package: .net-app/app.zip
 
     # Publish website to Azure App Service using CLI (WebApp)
+    # commenting just to have new trigger for deployment
     - name: Publish Website to WebApp
       uses: Azure/cli@v2
       with:
